Bug 172283 - SlideShow crashes host application
Summary: SlideShow crashes host application
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-Generic-Presentation (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-10-06 16:16 UTC by Andi Clemens
Modified: 2018-03-23 11:44 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.2.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andi Clemens 2008-10-06 16:16:38 UTC
Version:            (using KDE 4.1.2)
OS:                Linux
Installed from:    Unspecified Linux

When starting digiKam for example and closing it immediately, digiKam crashes. This can be reproduced every time here on my machine.

#0  0xab31f733 in ~Plugin_SlideShow (this=0xb300d18) at /home/andi/Programmieren/workspace/digikam_KDE4/kipi-plugins/slideshow/plugin_slideshow.cpp:111
#1  0xb7f1fe5d in QObjectPrivate::deleteChildren () from /usr/lib/libQtCore.so.4
#2  0xb7f27e4c in QObject::~QObject () from /usr/lib/libQtCore.so.4
#3  0xb6d597d1 in ~Interface (this=0xce9b7d0) at /home/andi/Programmieren/workspace/libs_KDE4/libs/libkipi/libkipi/interface.cpp:134
#4  0x081b95e4 in ~KipiInterface (this=0xce9b7d0) at /home/andi/Programmieren/workspace/digikam_KDE4/digikam/utilities/kipiiface/kipiinterface.cpp:73
#5  0xb7f1fe5d in QObjectPrivate::deleteChildren () from /usr/lib/libQtCore.so.4
#6  0xb6150a0f in QWidget::~QWidget () from /usr/lib/libQtGui.so.4
#7  0xb64557e2 in QMainWindow::~QMainWindow () from /usr/lib/libQtGui.so.4
#8  0xb7ac4dba in KMainWindow::~KMainWindow () from /usr/lib/libkdeui.so.5
#9  0xb7b07288 in KXmlGuiWindow::~KXmlGuiWindow () from /usr/lib/libkdeui.so.5
#10 0x08296661 in ~DigikamApp (this=0x94d29e8) at /home/andi/Programmieren/workspace/digikam_KDE4/digikam/digikam/digikamapp.cpp:268
#11 0xb7f1fb1c in qDeleteInEventHandler () from /usr/lib/libQtCore.so.4
#12 0xb7f2152b in QObject::event () from /usr/lib/libQtCore.so.4
#13 0xb61525f7 in QWidget::event () from /usr/lib/libQtGui.so.4
#14 0xb6455f4f in QMainWindow::event () from /usr/lib/libQtGui.so.4
#15 0xb7ac4238 in KMainWindow::event () from /usr/lib/libkdeui.so.5
#16 0xb7b081dd in KXmlGuiWindow::event () from /usr/lib/libkdeui.so.5
#17 0xb60ffeac in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#18 0xb61064fa in QApplication::notify () from /usr/lib/libQtGui.so.4
#19 0xb79f1e9e in KApplication::notify () from /usr/lib/libkdeui.so.5
#20 0xb7f12f60 in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#21 0xb7f138e0 in QCoreApplicationPrivate::sendPostedEvents () from /usr/lib/libQtCore.so.4
#22 0xb7f13a7e in QCoreApplication::sendPostedEvents () from /usr/lib/libQtCore.so.4
#23 0xb7f3a090 in ?? () from /usr/lib/libQtCore.so.4
#24 0x00000000 in ?? ()
Comment 1 Andi Clemens 2008-10-06 16:19:29 UTC
One more note: I can use slideshow without a problem. And if I wait long enough before closing the host application, it is not crashing. Very strange, maybe a race condition when calling the destructor.
Comment 2 Valerio Fuoglio 2008-10-06 17:46:48 UTC
Thanks for report.

Now for me is fixed, please reopen the bug if isn't so.
Comment 3 Andi Clemens 2008-10-06 18:08:51 UTC
Seems to work now. A little comment on the fix:
We at digiKam had a lot of problems with race conditions in the past when using 'delete' on QObjects, especially when 'delete' was called in destructors.
Normally you shouldn't delete QObjects at all, maybe it will also work when you remove all those deletes? As far as I can see these are all QObjects.

Andi