Fixed crash.

BUG: 172283
CCMAIL: kde-imaging@kde.org


svn path=/trunk/extragear/graphics/kipi-plugins/; revision=868547